--- a/EDA_Capstone_Project_1_Shweta_Shivhare.ipynb
+++ b/EDA_Capstone_Project_1_Shweta_Shivhare.ipynb
@@ -5462,13 +5462,13 @@
         "So we can conclude that:**\n",
         "\n",
         "1. Users mostly prefer the free apps. App size doesnot affect the decision of using the paid or free apps much.\n",
-        "2. Family, Games and Tools category have the highest number of apps published on Play store but Highest installation is from the Games category.\n",
-        "3. The apps which have the higher rating above 4 those are actually targetting all the people not a certain age group.\n",
-        "4. Dating, maps, Travel, video player these category apps received the lowest ratings from the user and we know that dating apps have high human interaction dependency, maps, travel apps can produce inaccurate data and there may be lots of video player apps available, so launching a new app in these categories is not recommended.\n",
+        "2. Family, Games and Tools category have the highest number of apps published on Play store but highest installation is from the Games category.\n",
+        "3. The apps which have the higher rating above 4 are targeting all the people and not a certain age group.\n",
+        "4. Dating, Maps, Travel, Video Player are the categories where apps have received the lowest ratings from the user as we know that dating apps have high human interaction dependency. Maps and travel apps can produce inaccurate data and there may be lots of video player apps available, so launching a new app in these categories is not recommended.\n",
         "5. On average the application size is in between 10 MB to 30 MB.\n",
         "6. Family, Game, Communication, Social, Tools, Medical, Events category Apps have the highest earning. \n",
-        "7. Also at the same time Medical, Family, Tools, Game category apps are the most expensive apps which actually is clear also because these category of the application market have the most invested money and indeed these are the right  categories to make best profits.\n",
-        "8. Customer ratings actually effect the category to release an app on that category.\n",
+        "7. Also at the same time Medical, Family, Tools, Game category apps are the most expensive apps which is clearly visible because these categories of the application market have the most invested money and indeed these are the right  categories to make best profits.\n",
+        "8. Customer ratings actually effect the category to release an app in that category.\n",
         "9. We can see that most positive sentiment reviews are from most polupar categories.\n",
         "10. Positive reviews are higher than negative and neutral sentiment reviews."
       ],
